*Empty MediaWiki Message*

--- a/Westerwoolds.mw
+++ b/Westerwoolds.mw
@@ -82,7 +82,7 @@ t Westerwoolds is sunt de ontginnen van de veengebieden veur t grootste gedeilte
 
 De eine kenmaarken, zo as de oetgank up -t bie aal meervoldsvörms en de Duutsege woorden as 'nich', verdwient almaol. Anner kenmaarken blieft, zo as de u in stee van o, zo as in 'op' en 'schot' ('up' en 'schut') wordt noch immer behoolden. 
 
-{{Dia|Dis ziede is schreven up '''Westerwoolds'''}}
+{{Dialekt|gos|Westerwolde}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
