*Empty MediaWiki Message*

--- a/Köllumerland_en_Nijkruusland.mw
+++ b/Köllumerland_en_Nijkruusland.mw
@@ -57,7 +57,7 @@ Ien de tabel hieronder stoan de offisjele kernen aangeven, mit doarbie de Grunni
 |[[Lutjewolde]]||''Lytsewâld''||''Augsbuurt''||ALIGN="right"|68
 |}
 
-{{dia|Schreven ien t [[Köllumerlands]]}}
+{{Dialekt|gos|[[Köllumerlands|Köllumerland]]}}
 
 {{DEFAULTSORT:Kollumerland En Nijkruusland}}
 [[Kategorie:Grunnegs artikel]]
