*Empty MediaWiki Message*

--- a/Piramide_van_Kheops.mw
+++ b/Piramide_van_Kheops.mw
@@ -35,7 +35,7 @@ De maiste [[farao]]'s wuiren utegd mit aalmoal weerdevolle schatten. In de piram
 == Hìnwiezen ==
 * [[Piramides van Giza]]
 
-{{dia|Schreven in t [[Veenkelonioals]]}}
+{{Dialekt|gos|[[Veenkelonioals|de Veankolonien]]}}
 
 {{DEFAULTSORT:Piramide Kheops}}
 [[Kategorie:Grunnegs_artikel]]
