*Empty MediaWiki Message*

--- a/Westerwoolde_(streek).mw
+++ b/Westerwoolde_(streek).mw
@@ -22,8 +22,8 @@ Ofbeelding:Lokoatsie Westerwolde2.JPG|Geograofisch gebiet Westerwoolde
 *[http://www.youtube.com/watch?v=xBErfcYmVbg Interview mit Edo Jans oet Westerwoolde over dizze streek, up Grönnegs (gein Westerwoolds)]
 {{commonscat|Westerwolde}}
 
-{{Dia|Schreven up zin [[Westerwoolds]]}}
 {{GrunnegerOmmelanden}}
+{{Dialekt|gos|[[Westerwoolds|Westerwolde]]}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
