*Empty MediaWiki Message*

--- a/Peter_van_der_Velde.mw
+++ b/Peter_van_der_Velde.mw
@@ -14,7 +14,7 @@ Van der Velde stun bekend as een bescheiden mèens. Hij preut over zien ‘gedic
 
 Zien verhaolen en gedichten binnen kört mor krachtig. Der steeit gien woord te veul in. Aachter zien humor geeit ok zeerte schoel. De kleine dingen van ’t leven kunnen neeit verbaargen dat ’t leven smangs ok pien döt. Maor gelukkig is der ok waarmte en ’t mooie van de natuur. [[Melancholie]] en levensvraogen binnen tweei onderwaarpen die in zien gedichten ok vaok veurkommen.
 
-{{Dialekt|gos|noordenveldsk}}
+{{Dialekt|gos|Noordenveld}}
 
 {{DEFAULTSORT:Velde, Peter Van Der}}
 [[Kategorie:Schriever ien t Grunnegs]]
