--- a/Stienwiek.mw
+++ b/Stienwiek.mw
@@ -12,7 +12,7 @@ Van oorsprong is Stienwiek een olde [[Stad (woonstee)|(vesting)stad]]. De gracht
 *[[Rams Woerthe]] en et stadspark
 *Langste zitbaanke ter wereld
 
-{{Dia|Dit stok is eskreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
+{{Dialekt|stl|[[Stienwiekerlaand|Steynwykerland]]}}
 
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Stad in Nederlaand]]
