*Empty MediaWiki Message*

--- a/Estlaand.mw
+++ b/Estlaand.mw
@@ -38,9 +38,8 @@ De grootste steden in Estlaand bint achterienvolgens:
 * [[Kohtla-Järve]] (46.032) 
 * [[Pärnu]] (44.396; inwonerantal per [[2005]])
 
-{{Dia|Disse pagina is eskreven in 't '''Attems'''}}
 {{commonscat|Estonia}}
+{{Dialekt|ovel|Hattem}}
 
-[[Kategorie:Oost-Veluws artikel]]
 [[Kategorie:Estlaand]]
 [[Kategorie:Lid van de Europese Unie]]
