*Empty MediaWiki Message*

--- a/Ni'jlusen.mw
+++ b/Ni'jlusen.mw
@@ -163,9 +163,8 @@ In dizze lieste vin ie boeken die oaver Ni'jlusen gaot.
 * [http://www.palthehof.nl Museum Palthehof]
 * [http://www.rijwiel.net/unionn.htm Geschiedenis van de Unionfebriek]
 
-{{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
+{{Dialekt|drt|Nylüsen}}
 
-[[Kategorie:Drèents artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Vroggere gemiente in Oaveriessel]]
 [[Kategorie:Dalsen]]
