*Empty MediaWiki Message*

--- a/Ni'jlusen.mw
+++ b/Ni'jlusen.mw
@@ -163,7 +163,7 @@ In dizze lieste vin ie boeken die oaver Ni'jlusen gaot.
 * [http://www.palthehof.nl Museum Palthehof]
 * [http://www.rijwiel.net/unionn.htm Geschiedenis van de Unionfebriek]
 
-{{Dialekt|drt|Nylüsen}}
+{{Dialekt|drt|[[Zuudwest-Zuud-Drèents|Nylüsen]]}}
 
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Vroggere gemiente in Oaveriessel]]
