--- a/Pompsters.mw
+++ b/Pompsters.mw
@@ -55,8 +55,6 @@ Deurdat de overgong tuzzen t Westerkertiers en t Woldfries hiel stug velopt, wor
 
 [[Ofbeelding:Lânkaart lokaasje pompstersk.GIF|250px|left|thumb|Lokoatsie van t Pompsters ien Nederlaand]]
 
-{{dia|Schreven ien t Pompsters}}
+{{Dialekt|gos|[[De Pomp]]}}
 
-[[Kategorie:Grunnegs_artikel]]
-[[Kategorie:Grunnegs|*]]
 [[Kategorie:Streektaol in Frieslaand]]
