--- a/Waddenzee.mw
+++ b/Waddenzee.mw
@@ -18,7 +18,7 @@ De Waddenzee wordt kìnmaarkt deur, tiedens [[eb]] drugevallende, [[zaandplaot|z
 
 De waddenzee is n beschaarmd natuurgebied, mit aan Nederlaandse zieden [[Nationaolpark Dunen van Texel|Natsjonoalpaark Dunen van Tessel]] en [[Nationaolpark Schiermonnikoog|Natsjonoalpaark t Aailaand]]. Aan Duutse kaande hest t [[Nationaolpark Nedersaksische waddenzee|Natsjonoalpaark ''Niedersachsisches Wattenmeer'']], [[Nationaolpark Hamburgse waddenzee|Natsjonoalpaark ''Hamburgisches Wattenmeer'']] en [[Nationaolpark Sleeswiek-Holsteinse waddenzee|Natsjonoalpaark ''Sleswig-Holsteinisches Wattenmeer'']].
 
-{{Dia|Dizze pagina is schreven in t [[Veenkelonioals]]}}
+{{Dialekt|gos|[[Veenkelonioals|de Veankolonien]]}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Wereldarfgood in Nederlaand]]
