*Empty MediaWiki Message*

--- a/Hunzego.mw
+++ b/Hunzego.mw
@@ -38,9 +38,7 @@ De volgende gemaintes liggen in Hunzego:
 * [[Loppersom (Grunnen)|Loppersom]] (gedailtelk)
 * [[Emsmond]]
 
-{{dia|Schreven in t [[Hoogelaandsters]]}}
-
 {{GrunnegerOmmelanden}}
+{{Dialekt|gos|[[Hoogelaandsters|et Hougeland]]}}
 
-[[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
