*Empty MediaWiki Message*

--- a/Veenkelonioals.mw
+++ b/Veenkelonioals.mw
@@ -68,7 +68,4 @@ Zo as al eer vermèld, wordt veur t [[verklainwoord]] onder aander -chie bruukt.
 == Rifferenties ==
 <references />
 
-{{Dialekt|gos|[[Veenkelonioals|de Veankolonien]]}}
-
-[[Kategorie:Drèents|*]]
-[[Kategorie:Grunnegs|*]]
+{{Dialekt|gos|de Veankolonien}}
