*Empty MediaWiki Message*

--- a/Stadsgrunnegs.mw
+++ b/Stadsgrunnegs.mw
@@ -76,7 +76,6 @@ t Zuvere Stadsgrunnegs is sikkom hailemoal verdwenen. Dit komt onder andere omda
 
 t Maiste Grunnegs in Stad komt van lu dij van t Grunneger platteland in Stad wonen goan binnen. De maiste Stadjeders binnen overstapt op t Hollaands, mòr summege olle mènzen (geboren véur de [[Tweede Wereldoorlog|Twaide Wereldoorlog]]) proaten nog Stadsgrunnegs. Ook zai hebben n hail ìnde overnomen vanòf t platteland. Stadsgrunnegs kin man voak nog heuren op de bankjes an de oostziede van de Vismaart, de 'hangstee' van de olle Stadjeders.
 
-{{dia|Dit artikel is schreven in t Stadsgrunnegs.}}
+{{Dialekt|gos|Stad}}
 
-[[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
