--- a/1984.mw
+++ b/1984.mw
@@ -10,6 +10,7 @@ De volgende gebeurtenissen vunne plaose in '''1984'''
 * [[23 jannewaori]] - [[Arjen Robben]], [[Nederlaand|Nederlaanse]] [[voebal]]speuler. 
 * [[6 september]] - [[Thomas Dekker]], Nederlaanse [[wielrunnen|wielrunner]]
 * [[15 september]] - Prins [[Henry van Weels]].
+* [[22 december]] - [[Basshunter]], sweedske sanger, musikproducent en DJ.
 
 == Uut de tied ==
 * [[Jan Poortman]], Drèentse skriever en onderwiezer
