([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:VlagJacobswoude.svg]] → [[File:Flag of Jacobswoude.svg]] [[c:COM:FR#FR2|Criterion 2]] (meaningless or ambiguous name)

--- a/Jakobswolde.mw
+++ b/Jakobswolde.mw
@@ -1,6 +1,6 @@
 {{Gemaente |
 naam = Jakobswolde |
-bestaandsnaam vlagge = VlagJacobswoude.svg |
+bestaandsnaam vlagge = Flag of Jacobswoude.svg |
 bestaandsnaam woapn = WapenJacobswoude.svg |
 lokatie = LocatieJacobswoude |
 proveensie = [[Ofbeelding:Flag Zuid-Holland.svg|20px|Zuud-Hollaand]] [[Zuud-Hollaand]] |
