--- a/De_Imitatione_Christi.mw
+++ b/De_Imitatione_Christi.mw
@@ -1,3 +1,3 @@
-'''De Imitatione Christi''' (vertaled: ''[Oaver] de nåvolging van Christus'') is een book eskreaven döär [[Thomas A Kempis]] in de 15. eywe. Et beskrevt ho as vöär een leavensholding een [[christendom|christen]] sol mütten hebben. Et book is wearldwyd vertaled en wörd noch elken dag eleasen. Et is eskreaven in den tyd dat Thomas a Kempis een bröder up et [[Agnietenklooster]] te [[Zwolle|Swolle]] was.
+'''De Imitatione Christi''' (vertaled: ''[Oaver] de nåvolging van Christus'') is een book eskreaven döär [[Thomas a Kempis]] in de 15. eywe. Et beskrevt ho as vöär een leavensholding een [[christendom|christen]] sol mütten hebben. Et book is wearldwyd vertaled en wörd noch elken dag eleasen. Et is eskreaven in den tyd dat Thomas a Kempis een bröder up et [[Begraafplaatse Bargklooster|Agnietenklooster]] te [[Zwolle|Swolle]] was.
 
 {{Dialekt|sdz}}
