*Empty MediaWiki Message*

--- a/De_Imitatione_Christi.mw
+++ b/De_Imitatione_Christi.mw
@@ -1,3 +1,7 @@
-'''De Imitatione Christi''' (vertaled: ''[Oaver] de nåvolging van Christus'') is een book eskreaven döär [[Thomas a Kempis]] in de 15. eywe. Et beskrevt ho as vöär een leavensholding een [[christendom|christen]] sol mütten hebben. Et book is wearldwyd vertaled en wörd noch elken dag eleasen. Et is eskreaven in den tyd dat Thomas a Kempis een bröder up et [[Begraafplaatse Bargklooster|Agnietenklooster]] te [[Zwolle|Swolle]] was.
+'''De Imitatione Christi''' (vertaled: ''[Oaver] de nåvolging van Christus'') is een book eskreaven döär [[Thomas a Kempis]] in de 15. eywe. Et beskrevt ho as vöär een leavensholding een [[christendom|christen]] sol mütten hebben. Et book is wearldwyd vertaled en wörd noch elken dag eleasen. Et is eskreaven in den tyd dat Thomas a Kempis een bröder up et [[Begraafplaatse Bargklooster|Agnietenklooster]] te [[Zwolle|Swolle]] was. Et is oorsprüngelik in et latyn eskreaven.
+
+Et book begünd as volgt:
+
+'' 'Wie mi-j volgt, löp nie in 't duuster' zeg n Heer. Dit bint de woordn van Kristus, en wi0j wöd dr op ewessn da'w zien haandeln en doon noa mut doon, a'w woarlik verlicht en bevri-jd in 't harte wön wilt. Oos aller streaven mut dus ween: oos in t leaven van Jezus Kristus te verdepen.''
 
 {{Dialekt|sdz}}
