*Empty MediaWiki Message*

--- a/De_Imitatione_Christi.mw
+++ b/De_Imitatione_Christi.mw
@@ -2,6 +2,6 @@
 
 Et book begünd as volgt:
 
-'' 'Wie mi-j volgt, löp nie in 't duuster' zeg n Heer. Dit bint de woordn van Kristus, en wi0j wöd dr op ewessn da'w zien haandeln en doon noa mut doon, a'w woarlik verlicht en bevri-jd in 't harte wön wilt. Oos aller streaven mut dus ween: oos in t leaven van Jezus Kristus te verdepen.''
+'' 'Wie mi-j volgt, löp nie in 't duuster' zeg n Heer. Dit bint de woordn van Kristus, en wi-j wöd dr op ewessn da'w zien haandeln en doen noa mut doen, a'w woarlik verlicht en bevri-jd in 't harte wön wilt. Oos aller streaven mut dus ween: oos in t leaven van Jezus Kristus te verdiepn.''
 
 {{Dialekt|sdz}}
