*Empty MediaWiki Message*

--- a/De_Imitatione_Christi.mw
+++ b/De_Imitatione_Christi.mw
@@ -2,6 +2,6 @@
 
 Et book begünd as volgt:
 
-'' 'Wie mi-j volgt, löp nie in 't duuster' zeg n Heer. Dit bint de woordn van Kristus, en wi-j wöd dr op ewessn da'w zien haandeln en doen noa mut doen, a'w woarlik verlicht en bevri-jd in 't harte wön wilt. Oos aller streaven mut dus ween: oos in t leaven van Jezus Kristus te verdiepn.''
+'' 'Wee my volgt, löpt neet in et düüster' segt den heyr. Dit bint de woorden van Christus, en wy wördet der up eweasen datte wy syn handelen en doon nå müttet doon, asse wy wårlik verlicht en bevryd in et harte wörden willet. Oans aller streaven müt düs weasen: oans in et leaven van Jesus Christus te verdepen.''
 
 {{Dialekt|sdz}}
