*Empty MediaWiki Message*

--- a/Leavenskrinkloup_(volksgelöyv).mw
+++ b/Leavenskrinkloup_(volksgelöyv).mw
@@ -3,24 +3,24 @@ Et [[Volksgeleuf|volksgelöyv]], van de '''krinkloup van leaven''', höld in dat
 ===Krinkloup===
 Een boum begünt as een sådtyn, den gröit, kregt blader en smet wear sådtyns up de grund. Dår begünt et heyle geböären vannys. So geyt alles in de natuur in een ründtyn in van geboaren wörden, gröien, vöärtplanten en starven.
 
-Op disse wyse bekeaken mensken sichsülve ouk. Toon as sy [[laandbouw|landbouw]] begünnen te bedryven, so een 6000 töt 8000 jår eleaden. Vanof toon kwamen sy jå heylemåle an de [[joarwissellings|jårwisselingen]] underwörpen. Mensken leaved med de natuurlike gang, van geböärte, gröien, vöärtplanten en uut de tyd kummen, med.
+Up disse wyse bekeaken mensken sichsülve ouk. Toon as sy [[laandbouw|landbouw]] begünnen te bedryven, so een 6000 töt 8000 jår eleaden. Vanof toon kwamen sy jå heylemåle an de [[joarwissellings|jårwisselingen]] underwörpen. Mensken leaved med de natuurlike gang, van geböärte, gröien, vöärtplanten en uut de tyd kummen, med.
 
-Sommigen dachten dat, as sy de tyd uut kummen, ear [[zele|sele]] de aerde, ''de [[onderweerld|underwearld]]'', in güngen. Dår sol he wachten töt as he der uut mochten, ümme verdan te leaven in eyne van syn nåsåten. Noh, so had y et ründtyn ouk wear in et geysteliken. De vöärolder waren dårümme ouk belangryk. Disse lüde wördden altyd herdached by de graven. En med belangryke beslissingen wördden sy ümme råd an-evrågen. Ouk wördden ear an-evrågen of as sy et land seagenen wolden.
+Sommigen dachten dat, as sy de tyd üüt kummen, ear [[zele|sele]] de aerde, ''de [[onderweerld|underwearld]]'', in güngen. Dår sol he wachten töt as he der üüt mochten, ümme verdan te leaven in eyne van syn nåsåten. Noh, so had y et ründtyn ouk wear in et geysteliken. De vöärolder waren dårümme ouk belangryk. Disse lüde wördden altyd herdached by de graven. En med belangryke beslissingen wördden sy ümme råd an-evrågen. Ouk wördden ear an-evrågen of as sy et land seagenen wolden.
 
 Et leaven mosd döär-egeaven wörden. Dårümme döäden vrouwlüde vake med an vrüchtbaarheidsrituelen, by [[heilige beume|heilige boumen]], steyne of waters. Et was mooi ewesd as de kleinen een jungentyn was, den kon hülpen op et land en ouk de name döärgeaven. As y geyn wichter kreagen, had y de eywenlange krinkloup van uwen vöärolder verbröäken.
 
 ===Eywenlange===
 Vöär dat et [[Kristendom|christendom]] der was, hebbet volker düsenden jåren lange an [[Modergodinne|Moder Aerde]] [en Vader Heamel] gelöyved. In verskillende förms en met vöäle namen. Sy baart al et leaven op Aerde en sörgt vöär vrüchtbaarheid. Höär symbool is in vöäle kulturen de måne. De måne hevt verskillende standen, wat wear denken düt an geboaren wörden, wichter krygen en doud gån. 
 
-Ümme eyns eaventyns een old symbool en tarm, uut et (olde) sassiske gebeed, up te nömen: De förme van de [[Germanen|germaanske]] Ing-[[rune]], uut et [[Futhark|germaanske alfabet]], müt een kütte of een eikel vöärstellen. Et steyt düs vöär vrüchtbaarheid. ''-ing'' ov ''-ink'' kum y vake in teagen achterup sassiske achternamen (''Zwerink, Lenfering,..''), wat wear verwesd når ofstamming. Dit gevt blyk van dit gelöyv.
+Ümme eyns eaventyns een old symbool en tarm, üüt et (olde) sassiske gebeed, up te nömen: De förme van de [[Germanen|germaanske]] Ing-[[rune]], üüt et [[Futhark|germaanske alfabet]], müt een kütte of een eikel vöärstellen. Et steyt düs vöär vrüchtbaarheid. ''-ing'' ov ''-ink'' kum y vake in teagen achterup sassiske achternamen (''Zwerink, Lenfering,..''), wat wear verwesd når ofstamming. Dit gevt blyk van dit gelöyv.
 
 As y de etymology van uns woord ''sele'' uutplüüst, blekt et verwant te weasen an 
-et woord ''sey''. Dan gevt dat et idey dat lüde vrogger gelöyvden dat de sele uut et water kwamt. En dat he dår ouk wearümme güng. Dit is düs wear een ander bekyk up de krinkloup. De sele sol blyven wachten in et water ümme noch eyns geboaren te wörden.
+et woord ''sey''. Dan gevt dat et idey dat lüde vrogger gelöyvden dat de sele üüt et water kwamt. En dat he dår ouk wearümme güng. Dit is düs wear een ander bekyk up de krinkloup. De sele sol blyven wachten in et water ümme noch eyns geboaren te wörden.
 
-Dit denken hevt in [[Europa|Europa]], by et burenvolk, noch töt ümme en nåby 1800 et vul-eholden. Anders as in de städen, dår as de [[Verlechting (stroming)|Verlichting]] et denken van de mensken al eyrder te pakken had. Teagenwoordig is de Verlichting bynå heylemåle döär-edrüngen. Dårümme denket mensken nu sülve ear eigen weg in et leaven uut te künnen setten, en sy seet sichsülve vryer van de natuurlike gang van krinkloup.
+Dit denken hevt in [[Europa|Europa]], by et burenvolk, noch töt ümme en nåby 1800 et vul-eholden. Anders as in de städen, dår as de [[Verlechting (stroming)|Verlichting]] et denken van de mensken al eyrder te pakken had. Teagenwoordig is de Verlichting bynå heylemåle döär-edrüngen. Dårümme denket mensken nu sülve ear eigen weg in et leaven üüt te künnen setten, en sy seet sichsülve vry(er) van de natuurlike gang van krinkloup.
 
 ===Wearldwyd===
-Dit gelöyv künnet wy so bettyn overal op de wearld wal vinden. 
+Dit gelöyv künnet wy so bettyn oaveral op de wearld wal vinden. 
 
 Een olde Indiaan sol eyns esegd hebben:
 
