--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -51,12 +51,12 @@ Een vöärnaam deyl van O'Nolans persöynlike ümstandigheyden was syn anseen as
 Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen was. Syne kollega's kunden wal lachen üm syne skryvsels. De yrske ambtenårye sat in dee tyd reydelik intellektueel en liberaal in mekander. Van de andere kante mus O'Nolan et ouk nit te gek maken. As hee der politici te slim sul döärhalen, wör hee der achterhen edån. Dat geböärden ouk in [[1953]].<ref>[https://www.irishtimes.com/culture/books/the-fantastic-flann-o-brien-1.611390 O'Toole, Fintan. "The Fantastic Flann O'Brien." 1 October 2011. The Irish Times.] bekeaken up 2 oktober 2011.</ref> "Syn vöärt-an slimmer wördende superye en syne gewoonte üm nearbügende upmarkingen oaver höygere politici te maken in syne krantenkolumns leidden der too dat hee in 1953 uut de ambtenårye sat wörd.<ref>[https://www.irishtimes.com/opinion/an-irishman-s-diary-1.763600 McNally, Frank. "An Irishman's Diary". 14 mei 2009. The Irish Times.] Bekeaken up 21 October 2018</ref> (Hee güng, herinnert sik nen kollega, "in a final fanfare of f***s".<ref>Phelan, Michael. "A Watcher in the Wings: A Lingering Look at Myles na gCopaleen". Administration. Dublin, Institute of Public Administration of Ireland. Vol 24, nr 2. 1976. p 96–106.</ref>)
 
 
-==Persöynlik leyven===
+==Persöynlik leyven==
 O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oaver syn persöynlike leyven. Hee güng by de yrske oaverheid warken in [[1935]], by de afdeyling lokaal bestüür. Vanaf dat syn vader uut de tyd köäm in [[1937]] underhöäld hee syne elv bröders en süsters van syn inkoamen. Up den [[2 december|tweyden december]] [[1948]] trowden hee med Evelyn McDonnell, ne typiste van de afdeyling. By et trowen verhüüsden hee van syn oldershuus in Blackrock når et körtby liggende Merrion Avenue. Töt syn dood woanden hee up noch verskillende andere steydes in süüd-Dublin.<ref>[http://www.ricorso.net/rx/az-data/authors/o/OBrien_F/life.htm Ricorso.net. "Flann O'Brien (1911-66)".] Bekeaken up 13 oktober 2009.</ref> Se hadden gin kinder.
 
 ===Gesundheid en dood===
 [[File:065 flann obrien grab.jpg|thumb|Grav van Brian O'Nolan/Brian Ó Nualláin, syne ölders en vrowe up et Deans Grange karkhov in Dublin]]
-O'Nolan was et gröätste deyl van syn leyven alkoholist. In latere jåren was hee ungesund.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/London. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråled vöär halskanker. Hee wör spåred van nen pynliken dood döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> In 1966 Brian was undergoing X-ray treatment for throat cancer. He was saved from the agony of dying from throat cancer by having a major heart attack. He died in that early morning of April 1st (April fool's day, his final joke).}}</ref>
+O'Nolan was et gröätste deyl van syn leyven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/London. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråled vöär halskanker. Hee wör spåred van nen pynliken dood döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> In 1966 Brian was undergoing X-ray treatment for throat cancer. He was saved from the agony of dying from throat cancer by having a major heart attack. He died in that early morning of April 1st (April fool's day, his final joke).}}</ref>
 
 ==Referensys==
 <references/>
