/* Tekste */ Aangepast naar de opname van Pisuisse uit 1907.

--- a/Meanse,_dörf_te_leven.mw
+++ b/Meanse,_dörf_te_leven.mw
@@ -9,31 +9,31 @@ T lied zet meansn an um meer van t leevn te gaon genietn en zik daor nie zovöll
 Je leeft maar heel kort, maar 'n enkele keer<br />
 En als je straks anders wilt, kun je niet meer!<br />
 Mensch, durf te leven!<br />
-Vraag niet elken dag van je korte bestaan:<br />
-Hoe hebben m'n pa en m'n grootpa gadaan?<br />
+Vraag niet elk minuut van je korte bestaan:<br />
+Hoe hebben m'n pa en m'n opa gedaan?<br />
 Hoe doet er m'n neef en hoe doet er m'n vrind?<br />
-En wie weet, hoe of dat nou m'n buurman weer vindt,<br />
+En wie weet, hoe of dat nou de wereld weer vindt,<br />
 En - wat heeft 'Het Fatsoen" voorgeschreven?<br />
 Mensch, durf te leven!<br />
 
 De menschen bepalen de kleur van je das,<br />
 De vorm van je hoed, en de snit van je jas<br />
 En - van je leven!<br />
-Ze wijzen de paadjes, waar langs je mag gaan,<br />
+Ze wijzen de paadjes, waar langs je moet gaan,<br />
 En roepen 'o foei!' als je even blijft staan, -<br />
-Ze kiezen je toekomst en kiezen je werk,<br />
+Ze kiezen je toekomst ze kiezen je werk,<br />
 Ze zoeken een kroeg voor je uit en een kerk,<br />
-En wat j' aan de armen moet geven.<br />
-Mensch, is dat te leven?<br />
+En wat je de armen moet geven.<br />
+Mensch, is dat leven?<br />
 
 De menschen - ze schrijven je leefregels voor,<br />
-Ze geven je raad, en roepen in koor:<br />
+Ze geven je raad, en ze roepen in koor:<br />
 Zoo moet je leven!<br />
 Met die mag je omgaan, maar die is te min.<br />
 Met die moet je trouwen, - al heb je geen zin.<br />
-En daar moet je wonen, dat eischt je fatsoen - <br />
-En je wordt genegeerd als je 't anders zou doen,<br />
-Alsof je iets ergs had misdreven,<br />
+En daar moet je wonen, dat eischt het fatsoen - <br />
+En je wordt genegeerd als je 't anders wil doen,<br />
+Als had je iets vreeslijks misdreven,<br />
 Mensch, is dat leven?<br />
 
 Het leven is heerlijk, het leven is mooi.<br />
