*Empty MediaWiki Message*

--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -128,7 +128,7 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |υ
 |y
 |y
-|Ypsilon
+|Upsilon
 |-
 |Φ
 |φ
@@ -159,8 +159,8 @@ As der op t ìnd van n woord n sigma (σ) te stoan komt, schrift man de sigma as
 
 Veurbeeld:
 
-*δουλο'''ς''' (doulos) 
-*'''σ'''ωμα (sooma)
+*δουλο'''ς''' (doulos, slaaf) 
+*'''σ'''ωμα (sooma, lichaam)
 
 == Nait klassiek ==
 {|class="wikitable"
