([[c:GR|GR]]) [[c:COM:Duplicate|Duplicate]]: [[File:Binnenmaas wapen 2009.svg]] → [[File:Coat of arms of Binnenmaas.svg]] Exact or scaled-down duplicate: [[c::File:Coat of arms of Binnenmaas.svg]]

--- a/Binnenmaas.mw
+++ b/Binnenmaas.mw
@@ -1,6 +1,6 @@
 {{Gemeante |
 bestaandsnaam vlagge =  Vlag_ontbreekt.svg |
-bestaandsnaam woapn = Binnenmaas wapen 2009.svg |
+bestaandsnaam woapn = Coat of arms of Binnenmaas.svg |
 naam = Binnenmaas |
 lokatie = LocatieBinnenmaas |
 proveensie = [[Zuud-Hollaand]] |
