*Empty MediaWiki Message*

--- a/De_Imitatione_Christi.mw
+++ b/De_Imitatione_Christi.mw
@@ -2,6 +2,6 @@
 
 Et book begünd as volgt:
 
-'' 'Wee my volgt, löpt neet in et düüster' segt den heyr. Dit bint de woorden van Christus, en wy wördet der up eweasen datte wy syn handelen en doon nå müttet doon, asse wy wårlik verlicht en bevryd in et harte wörden willet. Oans aller streaven müt düs weasen: oans in et leaven van Jesus Christus te verdepen.''
+'' 'Wee my volgt, löpt neet in et düüster' segt den heyr. Dit bint de woorden van Christus, en wy wördet der up eweasen datte wy syn handelen en doon nå müttet doon, asse wy wårlik verlicht en bevryd in et harte willet wörden. Oans allen streaven müt düs weasen: oans leaven doon so as Jesus Christus et edåne hevt.''
 
 {{Dialekt|sdz}}
