*Empty MediaWiki Message*

--- a/Meanse,_dörf_te_leven.mw
+++ b/Meanse,_dörf_te_leven.mw
@@ -1,9 +1,9 @@
-'''Meanse, dörf te leevn''' (oorsprunlik, Neerlaands: '''Mens, durf te leven''') is n Neerlaandstalig lied uut [[1917]], oorsprunklik eschreevn en ok zölf ezungn deur [[Dirk Witte]]. In n eertiedse Neerlaandse spelling hiettn t nog: ''"Mensch, durf te leven."''
+'''Menske, dürv te leaven''' (oorsprüngelik, neaderlandsk: '''Mens, durf te leven''') is een neaderlandsktalig leed üüt [[1917]], oorsprüngelik eskreaven en ouk sülv esüngen döär [[Dirk Witte]]. In de eyrtydske neaderlandske spelling heytten et noch: ''"Mensch, durf te leven."''
 
-Teengsnworig is t iene van de klassiekers uut de Neerlaandstalige meziek.
+Teegenwoordig is et eyne van de klassikers üüt de neaderlandsktalige musik.
 
-==Inhaold==
-T lied zet meansn an um meer van t leevn te gaon genietn en zik daor nie zovölle vraongn bi'j te stelln; en 't röp ok op nie aait de klaor-ezette paarn te voolngn, zik nie slaofs an te passn bi'j de meerderheid. Thematies eziene zet de tekste zik of teengn de eertieds nog zo invloedrieke sociale controle, en teengn de anvaording van de autoritaire moraal.  
+==Inhold==
+Et leed set mensken an ümme meyr van et leaven te geneten gån en sich dår neet sovöäle vrågen by te doon; en et röpt ouk up neet ait de klåre weagen te loupen, sich neet slaavs an te passen by de meyrderheid. Tematisk esene set de tekste sich of teagen de eyrtydsk noch so invloodryke sociale kontrole, en teagen de anvearding van de autoritäre moraal.  
 
 ==Tekste==
 Je leeft maar heel kort, maar 'n enkele keer<br />
