--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -65,23 +65,21 @@ Under de naam Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte st
 
 De breyve, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breyve van deselvde skryvers. De breyve slögen an by de leysers van de Irish Times en R. M. Smyllie, doomåls 'n höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryvn. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der drey skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
 
-Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolums gebröyk hee de naam Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den naam had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was 'n kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] der döär. Mangs warren de kolumns slim satirisk van toon, richt an de literaire elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regeyring en de "gewone lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig wearümme decht an een kort verblyv in Düütskland as student, is een vöärbeyld van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:
+Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolums gebröyk hee de naam Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den naam had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was 'n kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] der döär. Mangs warren de kolumns slim satirisk van toon, richt an de literaire elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regeyring en de "gewone lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig wearümme decht an een kort verblyv in Düütskland as student, is een vöärbeyld van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:<blockquote>Et valt my up dat et Gröne Eiland alvöärtan gröner wördet. Heyrlike sweyrachtigen dee up knöppe lyket nöstelt sik in de täkke van unse böyme, stummelige narcissen köänet seen worden up et hoge grösland. Lente is underweagens en yder höffelik meydken decht an dat nye vöärjårskleyd. De tyd sal sachter loupen töt Favonius oaver de weide verske kleyder uutspreide, de lely en de rose dee nit enaeyed hebbet of spünnen. Vervlöökt, myne gedachten gåt wearümme når myne dage in Heidelberg. Sonya en Lili. En Magda. En Ernst Schmutz, Georg Geier, Theodor Winkleman, [[Efrem zimbalist]], Otto Grün. En den [[akkordeon]]ist Kurt Schachmann. En Doktor Oreille, afstammeling van yrske prinsen. Ich hab' mein Herz/ in Heidelberg verloren/ in einer lauen/ Sommernacht/ Ich war verliebt/ bis über beide/ Ohren/ und wie ein Röslein/hatt'/ Ihr Mund gelächt of so yts humpa humpa humpa humpa humpa mein Herz it schlägt am Neckarstrand. Ne seer mooie studentenmelody. Beer en musik en middenachtelike swempartyen in de Neckar. Gespreaken in et yrsk med [[Kuno Meyer|Kun O'Meyer]] en John Marquess ... Helaas, sülke tingelende geluden. Und als wir nahmen/ Abschied vor den Toren/ beim letzten Küss, da hab' Ich Klar erkannt/ dass Ich mein Herz/ in Heidelberg verloren/ MEIN HERZ/ es schlägt am Neck-ar-strand! Humpa dumpa dum.</blockquote>
 
-Et valt my up dat et Gröne Eiland alvöärtan gröner wördet. Heyrlike sweyrachtigen dee up knöppe lyket nöstelt sik in de täkke van unse böyme, stummelige narcissen köänet seen worden up et hoge grösland. Lente is underweagens en yder höffelik meydken decht an dat nye vöärjårskleyd. De tyd sal sachter loupen töt Favonius oaver de weide verske kleyder uutspreide, de lely en de rose dee nit enaeyed hebbet of spünnen. Vervlöökt, myne gedachten gåt wearümme når myne dage in Heidelberg. Sonya en Lili. En Magda. En Ernst Schmutz, Georg Geier, Theodor Winkleman, [[Efrem zimbalist]], Otto Grün. En den [[akkordeon]]ist Kurt Schachmann. En Doktor Oreille, afstammeling van yrske prinsen. Ich hab' mein Herz/ in Heidelberg verloren/ in einer lauen/ Sommernacht/ Ich war verliebt/ bis über beide/ Ohren/ und wie ein Röslein/hatt'/ Ihr Mund gelächt of so yts humpa humpa humpa humpa humpa mein Herz it schlägt am Neckarstrand. Ne seer mooie studentenmelody. Beer en musik en middenachtelike swempartyen in de Neckar. Gespreaken in et yrsk med [[Kuno Meyer|Kun O'Meyer]] en John Marquess ... Helaas, sülke tingelende geluden. Und als wir nahmen/ Abschied vor den Toren/ beim letzten Küss, da hab' Ich Klar erkannt/ dass Ich mein Herz/ in Heidelberg verloren/ MEIN HERZ/ es schlägt am Neck-ar-strand! Humpa dumpa dum.
+:<blockquote>''Et gewone volk van Yrland:'' Is dat düütsk nit slim as et yrsk? Slim in 'n hals en so?</blockquote>
 
-:''Et gewone volk van Yrland:'' Is dat düütsk nit slim as et yrsk? Slim in 'n hals en so?
+:<blockquote>''Ikselv:'' Jå.</blockquote>
 
-:''Ikselv:'' Jå.
+:<blockquote>''Et gewone volk van Yrland:'' Lüde segt dat de düütske språke en de yrske språke slim uut 'n hals is.</blockquote>
 
-:''Et gewone volk van Yrland:'' Lüde segt dat de düütske språke en de yrske språke slim uut 'n hals is.
+:<blockquote>''Ikselv:'' jå.</blockquote>
 
-:''Ikselv:'' jå.
+:<blockquote>''Et gewone volk van Yrland:'' De geluden is allemål uut 'n hals, weat y neet.</blockquote>
 
-:''Et gewone volk van Yrland:'' De geluden is allemål uut 'n hals, weat y neet.
+:<blockquote>''Ikselv.'' Jå.</blockquote>
 
-:''Ikselv.'' Jå.
-
-:''Et gewone volk van Yrland:'' Språken slim achteruut 'n hals dee beide et keltisk en et düütsk.
+:<blockquote>''Et gewone volk van Yrland:'' Språken slim achteruut 'n hals dee beide et keltisk en et düütsk.</blockquote>
 
 Nuallain/na gCopaleen skreyv ''Cruiskeen Lawn'' vöär ''The Irish Times'' töt synen dood in 1966.
 
