--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -56,16 +56,16 @@ O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oave
 
 ===Gesundheid en dood===
 [[File:065 flann obrien grab.jpg|thumb|Grav van Brian O'Nolan/Brian Ó Nualláin, syne ölders en vrowe up et Deans Grange karkhov in Dublin]]
-O'Nolan was et gröätste deyl van syn leyven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/London. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråled vöär halskanker. Hee wör spåred van nen pynliken dood döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> In 1966 Brian was undergoing X-ray treatment for throat cancer. He was saved from the agony of dying from throat cancer by having a major heart attack. He died in that early morning of April 1st (April fool's day, his final joke).}}</ref>
+O'Nolan was et gröätste deyl van syn leyven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/London. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråled vöär halskanker. Hee wör spåred van nen pynliken dood döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> 
 
 ==Journalistik==
-Under de naam Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte stükkes vöär de [[Irish Times]]. Meysttyds in et [[engelsk]], mär ouk reygelmåtig in et [[keltisk]]. Syn krantenstükken "Cruiskeen Lawn" (ne verengelsking van de yrske naam ''Crúiscín lán'', wat "oaverströymend krüükske" bedüdet) begün as ne ryge breyve an de Irish Times. Oorsprunglik warren se bedoold üm een [[dichtkeunst|gedicht]] wat in deeselvde krante stünd der döär te halen: "Spraying the Potatoes", döär skryver Patrick Kavanagh:
+Under de naam Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte stükkes vöär de [[Irish Times]]. Meysttyds in et [[engelsk]], mär ouk reygelmåtig in et [[keltisk]]. Syn krantenstükken "Cruiskeen Lawn" (ne verengelsking van de yrske naam ''Crúiscín lán'', wat "oaverströymend krüükske" bedüdet) begün as ne ryge breyven an de Irish Times. Oorsprunglik warren se bedoold üm een [[dichtkeunst|gedicht]] wat in deeselvde krante stünd der döär te halen: "Spraying the Potatoes", döär skryver Patrick Kavanagh:
 
 "Ik sin ginnen dichtkenner - Et eanigste gedicht wat ik ooit skreyv köäm voort doo as ik med lyv en sele in et güldene harnas van Dame Laudanum verbleyv - mär ik denke dat menear Kavanaugh [sic] up de gode weg is. Misskyn wil de ''Irish Times'', tydlosen kampioon van uns burenvolk, uns temöyte koamen med ne ryge oaver sodöanige burene ingewikkeldheden as untstöakene [[sik]]ken-üyers, horselpokte korthoornründer, besmettelike abortus, neet-eivörmige eileiders en senüwstöringen by heyren dee de hüür betalet."
 
-De breyve, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breyve van deselvde skryvers. De breyve slögen an by de leysers van de Irish Times en R. M. Smyllie, doomåls 'n höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryvn. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der drey skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
+De breyven, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breyven van deselvde skryvers. De breyven slögen an by de leysers van de Irish Times en R. M. Smyllie, doomåls 'n höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryven. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der drey skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
 
-Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolums gebröyk hee de naam Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den naam had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was 'n kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] der döär. Mangs warren de kolumns slim satirisk van toon, richt an de literaire elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regeyring en de "gewone lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig wearümme decht an een kort verblyv in Düütskland as student, is een vöärbeyld van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:
+Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolumns gebröyk hee de naam Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den naam had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was 'n kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] der döär. Mangs warren de kolumns slim satirisk van toon, richt an de literaire elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regeyring en de "gewone lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig wearümme decht an een kort verblyv in Düütskland as student, is een vöärbeyld van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:
 
 <blockquote>"Et valt my up dat et Gröne Eiland alvöärtan gröner wördet. Heyrlike sweyrachtigen dee up knöppe lyket nöstelt sik in de täkke van unse böyme, stummelige narcissen köänet seen worden up et hoge grösland. Lente is underweagens en yder höffelik meydken decht an dat nye vöärjårskleyd. De tyd sal sachter loupen töt Favonius oaver de weide verske kleyder uutspreide, de lely en de rose dee nit enaeyed hebbet of spünnen. Vervlöökt, myne gedachten gåt wearümme når myne dage in Heidelberg. Sonya en Lili. En Magda. En Ernst Schmutz, Georg Geier, Theodor Winkleman, [[Efrem zimbalist]], Otto Grün. En den [[akkordeon]]ist Kurt Schachmann. En Doktor Oreille, afstammeling van yrske prinsen. Ich hab' mein Herz/ in Heidelberg verloren/ in einer lauen/ Sommernacht/ Ich war verliebt/ bis über beide/ Ohren/ und wie ein Röslein/hatt'/ Ihr Mund gelächt of so yts humpa humpa humpa humpa humpa mein Herz it schlägt am Neckarstrand. Ne seyr mooie studentenmelody. Beer en musik en middenachtelike swempartyen in de Neckar. Gespreaken in et yrsk med [[Kuno Meyer|Kun O'Meyer]] en John Marquess ... Helaas, sülke tingelende geluden. Und als wir nahmen/ Abschied vor den Toren/ beim letzten Küss, da hab' Ich Klar erkannt/ dass Ich mein Herz/ in Heidelberg verloren/ MEIN HERZ/ es schlägt am Neck-ar-strand! Humpa dumpa dum.</blockquote>
 
